# Desarrollos_Odoo

./: pyproject.toml
Automatizaciones/Ejecuciones/: migracionAltum.bat
Automatizaciones/Ejecuciones/python/: AltumForms.py  Hola.py  Migracion Odoo.py
Automatizaciones/api_conexion_vise/: Api_conexion.py
Automatizaciones/api_conexion_vise/crear_campos/: Campos_Many2many.py  Campos_One2Many.py  Creacion_Campos.py
Automatizaciones/api_conexion_vise/crear_grupos/: crear_grupos.py  herencia_grupos.py
Automatizaciones/api_conexion_vise/crear_modelos/: crear_modelos_nuevos.py  modelo_completo.py
Automatizaciones/api_conexion_vise/crear_permisos/: crear_permisos.py
V14/: o14_com.conf
V14/desarrollovise/altumforms/: __manifest__.py
V14/desarrollovise/altumforms/data/: sector.csv  source.csv
V14/desarrollovise/altumforms/models/: company.py  question_answer_group.py  source.py
V14/desarrollovise/altumforms/security/: ir.model.access.csv  security_groups.xml
V14/desarrollovise/altumforms/views/: menu.xml  question_type_views.xml  sector.xml  source.xml
V14/desarrollovise/avancys/: __init__.py  __manifest__.py
V14/desarrollovise/avancys/data/: ir_model_data.xml
V14/desarrollovise/cedula_extractor/: __manifest__.py
V14/desarrollovise/certificado_seguridad/: __manifest__.py
V14/desarrollovise/diplomas/: __manifest__.py
V14/desarrollovise/gestion_documentos/: __manifest__.py
V14/desarrollovise/pazysalvo/: __manifest__.py
V14/desarrollovise/peliculas/: __manifest__.py
V14/desarrollovise/transcriptores_gemini/: __manifest__.py
(+90 files in other folders)
